# AI-Agent-Capstone

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: Pilot_Program_Feedback.csv  controlled_test_runs_data.csv  feedback.json  knowledge_graph.json
data/pilot_data/: Pilot_Program_Feedback.csv  controlled_test_runs_data.csv
scripts/: ingest_sample.py  run_local.sh  test_api_final.py  test_end_to_end.py  test_feedback.py  test_multimodal_ingestion.py  test_orchestrator.py  test_vision.py
services/ingestion/: concept_agent.py  parsing_agent.py  relation_agent.py  vision_agent.py
services/orchestrator/: agent_base.py  app.py  config.py  orchestrator.py
services/pedagogy/: critic_agent.py  feedback_service.py  teaching_agent.py
services/tools/: graph_store.py  image_extractor.py  llm_clients.py  pdf_parser.py  vector_store.py
