[project]
name = "flowmind"
version = "0.1.0"
description = "FlowMind Agent Collection"
authors = [
    {name = "Ronith", email = "ronithrashmikara@gmail.com"},
]
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "neo4j",
    "pinecone-client",
    "redis",
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
